RESOLVED FIXED71990
[GTK] [WebKit2] Fix remaining gtkdoc errors
https://bugs.webkit.org/show_bug.cgi?id=71990
Summary [GTK] [WebKit2] Fix remaining gtkdoc errors
Martin Robinson
Reported 2011-11-09 19:23:13 PST
This bug tracks fixing a few remaining gtkdoc errors in the WebKit2 API.
Attachments
Patch (3.59 KB, patch)
2011-11-09 19:27 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-11-09 19:27:47 PST
WebKit Review Bot
Comment 2 2011-11-09 19:31:03 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2011-11-10 00:14:00 PST
Comment on attachment 114421 [details] Patch LGTM
WebKit Review Bot
Comment 4 2011-11-10 08:47:43 PST
Comment on attachment 114421 [details] Patch Clearing flags on attachment: 114421 Committed r99863: <http://trac.webkit.org/changeset/99863>
WebKit Review Bot
Comment 5 2011-11-10 08:47:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.