[GTK] [WebKit2] Fix remaining gtkdoc errors https://bugs.webkit.org/show_bug.cgi?id=71990

Patch by Martin Robinson <mrobinson@igalia.com> on 2011-11-10
Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitWebView.cpp: Update add the phrase "property" to
references to properties, because the gtkdoc stylesheet does not differeniate
between properties and signals. Standardize the way we talk about property
notifications.
* UIProcess/API/gtk/docs/webkit2gtk-docs.sgml: Add an include to silence
warnings about GIR annotations.
* UIProcess/API/gtk/docs/webkit2gtk-sections.txt: Add the decorators the private section.

Canonical link: https://commits.webkit.org/88426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99863 268f45cc-cd09-0410-ab3c-d52691b4dbfc